--- a/codeCampChallenges/basic-HTML-HTML5/headlineWithTheH2Element.html
+++ b/codeCampChallenges/basic-HTML-HTML5/headlineWithTheH2Element.html
@@ -1,4 +1,6 @@
-<!-- Over the next few lessons, we'll build an HTML5 cat photo web app piece-by-piece.
+<!-- INFORMATION:
+
+Over the next few lessons, we'll build an HTML5 cat photo web app piece-by-piece.
 
 The h2 element you will be adding in this step will add a level two heading to the web page.
 
@@ -6,14 +8,14 @@ This element tells the browser about the structure of your website. h1 elements 
 
 <!--
 
-Start of Challenge:
+CHALLENGE INSTRUCTIONS:
 
 Add an h2 tag that says "CatPhotoApp" to create a second HTML element below your "Hello World" h1 element.
 <h1>Hello World</h1>
 
 -->
 
-<!-- Answer -->
+<!-- ANSWER: -->
 
 <h1>Hello World</h1>
 <h2>CatPhotoApp</h2>
