--- a/codeCampChallenges/basic-HTML-HTML5/sayHelloToHtmlElements.html
+++ b/codeCampChallenges/basic-HTML-HTML5/sayHelloToHtmlElements.html
@@ -1,4 +1,6 @@
-<!--Instructions for challenge
+<!--
+
+INFORMATION:
 Basic HTML and HTML5: Say Hello to HTML Elements
 Welcome to freeCodeCamp's HTML coding challenges. These will walk you through web development step-by-step.
 
@@ -19,10 +21,18 @@ The only difference between opening and closing tags is the forward slash after 
 
 Each challenge has tests you can run at any time by clicking the "Run tests" button. When you pass all tests, you'll be prompted to submit your solution and go to the next coding challenge.
 
-Beginning of challenge:
+CHALLENGE INSTRUCTIONS:
 
 <h1>Hello</h1>
 
-To pass the test on this challenge, change your h1 element's text to say "Hello World".-->
+To pass the test on this challenge, change your h1 element's text to say "Hello World".
+
+CODE PROVIDED:
 
 <h1>Hello World</h1>
+-->
+
+<!-- ANSWER: -->
+
+<h1>Hello World</h1>
+
